ApexBasics/force-app/main/default/objects/MyProduct__c/fields/variant__c.field-meta.xml
<CustomField>
    <fullName>variant__c</fullName>
    <formula>Version__r.Variant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>variant</label>
    <type>Text</type>
</CustomField>