ApexBasics/force-app/main/default/objects/MyProduct__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version</label>
    <referenceTo>Product_Version__c</referenceTo>
    <relationshipLabel>MyProduct</relationshipLabel>
    <relationshipName>MyProduct</relationshipName>
    <type>Lookup</type>
</CustomField>